fix: not found page not showing

--- a/src/pages/NotFoundPage/NotFoundPage.module.scss
+++ b/src/pages/NotFoundPage/NotFoundPage.module.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   background-color: rgb(255, 129, 129);
@@ -11,4 +12,40 @@
   font-size: 3rem;
   color: rgb(255, 255, 255);
   text-transform: uppercase;
+}
+
+.home-btn {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  border: 2px solid white;
+  border-radius: 50%;
+  background: transparent;
+  background-color: transparent;
+  scale: 100%;
+  transition: 0.2s;
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -55%);
+    width: 32px;
+    height: 32px;
+    background-image: url('assets/icons/home.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
+
+  &:hover {
+    border: 2px solid rgb(147, 255, 201);
+    scale: 110%;
+
+    &::after {
+      filter: brightness(0) saturate(100%) invert(84%) sepia(37%) saturate(385%)
+        hue-rotate(88deg) brightness(99%) contrast(106%);
+    }
+  }
 }
